--- a/webos-desktop/package.json
+++ b/webos-desktop/package.json
@@ -7,10 +7,23 @@
     "dev": "vite",
     "build": "pnpm run format && vite build && rm -rf ../desktop/* && cp -r dist/* ../desktop/",
     "preview": "vite preview",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "lint": "eslint . --ext .js,.jsx"
   },
   "devDependencies": {
-    "vite": "^7.3.0",
-    "prettier": "^3.7.4"
+    "@eslint/js": "^9.39.2",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-es": "^4.1.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "prettier": "^3.7.4",
+    "vite": "^7.3.1"
+  },
+  "dependencies": {
+    "browserfs": "^1.4.3",
+    "eslint-define-config": "^2.1.0",
+    "globals": "^17.0.0"
   }
 }
