--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,51 +7,117 @@ on:
         description: 'Release version'
         required: true
 
+permissions:
+  contents: write
+
 jobs:
-  build-and-release:
+  build-linux:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: '20'
-
-      - name: Install pnpm
-        run: npm install -g pnpm
-
-      - name: Install dependencies in webos-desktop
-        working-directory: webos-desktop
+      - run: npm install -g pnpm
+      - working-directory: webos-desktop
         run: pnpm install
-
-      - name: Install dependencies in yukios
-        working-directory: yukios
+      - working-directory: yukios
         run: |
           pnpm install
           node node_modules/electron/install.js
-
-      - name: Build Yukios
-        working-directory: yukios
-        run: pnpm build
-
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
+      - working-directory: yukios
+        run: pnpm run build-linux
+      - working-directory: yukios/dist
+        run: ls -la || true
+      - uses: actions/upload-artifact@v4
         with:
-          tag_name: ${{ github.event.inputs.version }}
-          release_name: Release ${{ github.event.inputs.version }}
-          draft: false
-          prerelease: false
-          token: ${{ secrets.GITHUB_TOKEN }}
+          name: linux-build
+          path: |
+            yukios/dist/Yukios-*.AppImage
+            yukios/dist/yukios-*.zip
+            yukios/dist/yukios_*.deb
 
-      - name: Upload release assets
-        uses: softprops/action-gh-release@v1
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          files: |
-            dist/linux-unpacked/**
-            dist/yukios_*.deb
-            dist/yukios-*.zip
+          node-version: '20'
+      - run: npm install -g pnpm
+      - working-directory: webos-desktop
+        run: pnpm install
+      - working-directory: yukios
+        run: |
+          pnpm install
+          node node_modules/electron/install.js
+      - working-directory: yukios
+        run: pnpm run build-win
+      - working-directory: yukios/dist
+        run: |
+          Get-ChildItem -File | ForEach-Object {
+            $zipName = "yukios-1.0.0.zip"
+            Compress-Archive -Path $_.FullName -DestinationPath $zipName -Update
+          }
+          ls -la
+      - uses: actions/upload-artifact@v4
+        with:
+          name: windows-build
+          path: yukios/dist/yukios-1.0.0.zip
+
+  build-mac:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+      - run: npm install -g pnpm
+      - working-directory: webos-desktop
+        run: pnpm install
+      - working-directory: yukios
+        run: |
+          pnpm install
+          node node_modules/electron/install.js
+      - working-directory: yukios
+        run: pnpm run build-mac
+      - working-directory: yukios/dist
+        run: ls -la || true
+      - uses: actions/upload-artifact@v4
+        with:
+          name: mac-build
+          path: yukios/dist/Yukios-*-mac.zip
+
+  release:
+    runs-on: ubuntu-latest
+    needs:
+      - build-linux
+      - build-windows
+      - build-mac
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v4
+        with:
+          name: linux-build
+          path: release_files/linux
+      - uses: actions/download-artifact@v4
+        with:
+          name: windows-build
+          path: release_files/windows
+      - uses: actions/download-artifact@v4
+        with:
+          name: mac-build
+          path: release_files/mac
+      - run: ls -R release_files || true
+      - uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.event.inputs.version }}
+          name: Release ${{ github.event.inputs.version }}
+          files: |
+            release_files/linux/Yukios-*.AppImage
+            release_files/linux/yukios-*.zip
+            release_files/linux/yukios_*.deb
+            release_files/windows/yukios-1.0.0.zip
+            release_files/mac/Yukios-*-mac.zip
