Improve game launching logic and asset preloading

--- a/yukios/package.json
+++ b/yukios/package.json
@@ -10,6 +10,7 @@
   "description": "Yukios Game/Utility Application",
   "scripts": {
     "start": "electron .",
+    "format": "git diff --name-only --diff-filter=ACMRTUXB | grep -E '\\.(js|jsx|ts|css|json|html)$' || true | xargs -r -P 4 pnpm exec prettier --write",
     "build-linux": "node build.js && npx electron-builder --linux",
     "build-win": "node build.js && npx electron-builder --win",
     "build-mac": "node build.js && npx electron-builder --mac",
