--- a/webos-desktop/package.json
+++ b/webos-desktop/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "pnpm run format && vite build && rm -rf ../desktop/* && cp -r dist/* ../desktop/",
+    "build": "pnpm run format && vite build",
     "build-win": "vite build",
     "preview": "vite preview",
     "format": "git diff --name-only --diff-filter=ACMRTUXB | grep -E '\\.(js|jsx|ts|css|json|html)$' || true | xargs -r -P 4 pnpm exec prettier --write",
