--- a/yukios/package.json
+++ b/yukios/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "electron-updater": "^6.7.3",
     "express": "^5.2.1"
   },
   "build": {
@@ -73,6 +74,13 @@
       "icon": "resources/icons",
       "maintainer": "reeyuki@example.com",
       "category": "Game"
-    }
+    },
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "reeyuki",
+        "repo": "reeyuki.github.io"
+      }
+    ]
   }
 }
