Add cross origin policy for vciframe

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,11 @@
   [headers.values]
     Cross-Origin-Opener-Policy = "same-origin"
     Cross-Origin-Embedder-Policy = "require-corp"
+  
+  for = "/static/vciframe.html"
+  [headers.values]
+    Cross-Origin-Opener-Policy = "same-origin"
+    Cross-Origin-Embedder-Policy = "require-corp"
 
 [[headers]]
   for = "/*"
